src/test/ui-fulldeps/unnecessary-extern-crate.stderr
error: `extern crate` is unnecessary in the new edition
  --> $DIR/unnecessary-extern-crate.rs:14:1
   |
LL | extern crate alloc;
   | ^^^^^^^^^^^^^^^^^^^ help: remove it
   |
note: lint level defined here
  --> $DIR/unnecessary-extern-crate.rs:11:9
   |
LL | #![deny(unnecessary_extern_crate)]
   |         ^^^^^^^^^^^^^^^^^^^^^^^^

error: `extern crate` is unnecessary in the new edition
  --> $DIR/unnecessary-extern-crate.rs:17:1
   |
LL | extern crate alloc as x;
   | ^^^^^^^^^^^^^^^^^^^^^^^^ help: use `use`: `use alloc as x`

error: `extern crate` is unnecessary in the new edition
  --> $DIR/unnecessary-extern-crate.rs:23:1
   |
LL | pub extern crate test as y;
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use `pub use`: `pub use test as y`

error: `extern crate` is unnecessary in the new edition
  --> $DIR/unnecessary-extern-crate.rs:26:1
   |
LL | pub extern crate libc;
   | ^^^^^^^^^^^^^^^^^^^^^^ help: use `pub use`: `pub use libc`

error: `extern crate` is unnecessary in the new edition
  --> $DIR/unnecessary-extern-crate.rs:32:5
   |
LL |     extern crate alloc;
   |     ^^^^^^^^^^^^^^^^^^^ help: use `use`: `use alloc`

error: `extern crate` is unnecessary in the new edition
  --> $DIR/unnecessary-extern-crate.rs:35:5
   |
LL |     extern crate alloc as x;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^ help: use `use`: `use alloc as x`

error: `extern crate` is unnecessary in the new edition
  --> $DIR/unnecessary-extern-crate.rs:38:5
   |
LL |     pub extern crate test;
   |     ^^^^^^^^^^^^^^^^^^^^^^ help: use `pub use`: `pub use test`

error: `extern crate` is unnecessary in the new edition
  --> $DIR/unnecessary-extern-crate.rs:41:5
   |
LL |     pub extern crate test as y;
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^ help: use `pub use`: `pub use test as y`

error: `extern crate` is unnecessary in the new edition
  --> $DIR/unnecessary-extern-crate.rs:45:9
   |
LL |         extern crate alloc;
   |         ^^^^^^^^^^^^^^^^^^^ help: use `use`: `use alloc`

error: `extern crate` is unnecessary in the new edition
  --> $DIR/unnecessary-extern-crate.rs:48:9
   |
LL |         extern crate alloc as x;
   |         ^^^^^^^^^^^^^^^^^^^^^^^^ help: use `use`: `use alloc as x`

error: aborting due to 10 previous errors

